3.0 port done